design & some technicalities

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -3,6 +3,15 @@
     "Last name": "Achternaam",
     "Username": "Gebruikersnaam",
     "No account yet?": "Nog geen account?",
+    "Register here": "Registreer hier",
+    "Login here": "Log hier in",
+    "Home": "Home",
+    "Categories": "Categorieën",
+    "New list": "Nieuwe lijst",
+    "Edit profile": "Bewerk profiel",
+    "Go to": "Ga naar",
+    "shop": "winkel",
+    "My lists": "Mijn lijsten",
 
 
     "30 Days": "30 dagen",
