design & some technicalities

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -12,6 +12,12 @@
     "Go to": "Ga naar",
     "shop": "winkel",
     "My lists": "Mijn lijsten",
+    "Name of the child": "Naam van het kind",
+    "Description": "Beschrijving",
+    "Photo of the child": "Foto van het kind",
+    "Password of the list": "Wachtwoord van de lijst",
+    "ATTENTION! This password is for accessing the list. Those who you want to invite, will need this password. Don't choose a personal password.": "LET OP! Dit wachtwoord is om toegang te krijgen tot de lijst. Diegene die u wilt uitnodigen wullen dit wachtwoord ter beschikking moeten hebben. Kies dus geen persoonlijk wachtwoord.",
+    "Make list": "Maak lijst",
 
 
     "30 Days": "30 dagen",
