design & some technicalities

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -18,6 +18,26 @@
     "Password of the list": "Wachtwoord van de lijst",
     "ATTENTION! This password is for accessing the list. Those who you want to invite, will need this password. Don't choose a personal password.": "LET OP! Dit wachtwoord is om toegang te krijgen tot de lijst. Diegene die u wilt uitnodigen wullen dit wachtwoord ter beschikking moeten hebben. Kies dus geen persoonlijk wachtwoord.",
     "Make list": "Maak lijst",
+    "Gender of the child": "Geslacht van het kind",
+    "Boy": "Jongen",
+    "Girl": "Meisje",
+    "Neutral": "Neutraal",
+    "Delete list": "Verwijder lijst",
+    "Toys": "Speelgoed",
+    "Clothes": "Kleding",
+    "Sleep": "Slapen",
+    "Care": "Verzorging",
+    "Safety": "Veiligheid",
+    "School": "School",
+    "On the way": "Onderweg",
+    "Price": "Prijs",
+    "Low to high": "Laag naar hoog",
+    "High to low": "Hoog naar laag",
+    "Offered by": "Aangeboden door",
+    "Add to list": "Toevoegen aan lijst",
+    "Check out this product on the official website": "Bekijk dit product op de officiële website",
+    "Not yet purchased": "Nog niet gekocht",
+    "Purchased by": "Gekocht door",
 
 
     "30 Days": "30 dagen",
