design & some technicalities

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -38,6 +38,20 @@
     "Check out this product on the official website": "Bekijk dit product op de officiële website",
     "Not yet purchased": "Nog niet gekocht",
     "Purchased by": "Gekocht door",
+    "There are": "Er zijn",
+    "There is": "Er is",
+    "of the": "van de",
+    "products bought": "producten gekocht",
+    "spend": "uitgegeven",
+    "Forgot password": "Wachtwoord vergeten",
+    "Fill in your email and we will send you a link to reset your password": "Vul hier uw emailadres in en we sturen een link om jouw wachtoord te resetten",
+    "Send Reset Link": "Stuur herstellink",
+    "Fill in the password you have received from the parents to access the list": "Voer hier het wachtwoord in gekregen van de ouders om wo toegang te krijgen tot de lijst",
+    "Get access": "Krijg toegang",
+    "Buy this product": "Koop dit product",
+    "Leave a message to the parents": "Laat een boodschap achter voor de parents",
+    "Go to payment": "Ga naar betaling",
+    "Buy another product": "Koop een ander product",
 
 
     "30 Days": "30 dagen",
