dynamic paging, routes & controllers

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -52,6 +52,9 @@
     "Leave a message to the parents": "Laat een boodschap achter voor de parents",
     "Go to payment": "Ga naar betaling",
     "Buy another product": "Koop een ander product",
+    "There are no products available at the moment": "Er zijn geen producten beschikbaar op dit moment",
+    "products": "producten",
+    "Product details": "Product details",
 
 
     "30 Days": "30 dagen",
