dynamic paging, routes & controllers

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -55,6 +55,7 @@
     "There are no products available at the moment": "Er zijn geen producten beschikbaar op dit moment",
     "products": "producten",
     "Product details": "Product details",
+    "You haven't got any lists yet": "Je hebt nog geen lijsten",
 
 
     "30 Days": "30 dagen",
