dynamic paging, routes, controller & minor changes

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -56,6 +56,8 @@
     "products": "producten",
     "Product details": "Product details",
     "You haven't got any lists yet": "Je hebt nog geen lijsten",
+    "Product sucessfully added": "Product succesvol toegevoegd",
+    "Edit list": "Bewerk lijst",
 
 
     "30 Days": "30 dagen",
