--- a/lang/nl.json
+++ b/lang/nl.json
@@ -58,6 +58,7 @@
     "You haven't got any lists yet": "Je hebt nog geen lijsten",
     "Product sucessfully added": "Product succesvol toegevoegd",
     "Edit list": "Bewerk lijst",
+    "Are you sure?": "Ben je zeker?",
 
 
     "30 Days": "30 dagen",
