dynamic paging, controllers, routes & minor changes

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -59,6 +59,11 @@
     "Product sucessfully added": "Product succesvol toegevoegd",
     "Edit list": "Bewerk lijst",
     "Are you sure?": "Ben je zeker?",
+    "Successfully deleted list": "Lijst succesvol verwijderd",
+    "Successfully deleted product": "Product succesvol verwijderd",
+    "Delete this product": "Verwijder dit product",
+    "Your personal link is:": "Jouw persoonlijke link is:",
+    "List": "Lijst",
 
 
     "30 Days": "30 dagen",
