payment-system, dynamic paging, controllers, routing

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -69,6 +69,11 @@
     "There are no products in your cart": "Er zitten geen producten in jouw winkelwagen",
     "Pay": "Betaal",
     "Amount:": "Bedrag:",
+    "The parents of ": "De ouders van ",
+    " are gratefull": " zijn je heel erg dankbaar",
+    "Go back to the list": "Ga terug naar de lijst",
+    "This product is already bought": "Dit product is al gekocht",
+    "Message:": "Bericht:",
 
 
     "30 Days": "30 dagen",
