Some finishing touches

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -74,6 +74,11 @@
     "Go back to the list": "Ga terug naar de lijst",
     "This product is already bought": "Dit product is al gekocht",
     "Message:": "Bericht:",
+    "Successfully created list": "Lijst succesvol aangemaakt",
+    "Successfully edited profile": "Profiel succesvol aangepast",
+    "Successfully edited list": "Lijst succesvol aangepast",
+    "There are no products on your list": "Er staan geen producten op jouw lijst",
+    "Add some here": "Voeg er wat toe hier",
 
 
     "30 Days": "30 dagen",
