--- a/lang/nl.json
+++ b/lang/nl.json
@@ -32,6 +32,7 @@
     "Home": "Home",
     "Last name": "Achternaam",
     "Leave a message to the parents": "Laat een boodschap achter voor de ouders",
+    "Leave this empty if you don't want to change the image": "Laat dit leeg als je de foto niet wil veranderen",
     "List": "Lijst",
     "Login here": "Log hier in",
     "Low to high": "Laag naar hoog",
