--- a/lang/nl.json
+++ b/lang/nl.json
@@ -49,6 +49,7 @@
     "Password of the list": "Wachtwoord van de lijst",
     "Pay": "Betaal",
     "Photo of the child": "Foto van het kind",
+    "Popular": "Populair",
     "Price": "Prijs",
     "Product details": "Product details",
     "Product sucessfully added": "Product succesvol toegevoegd",
