--- a/lang/nl.json
+++ b/lang/nl.json
@@ -28,6 +28,8 @@
     "Go back to the list": "Ga terug naar de lijst",
     "Go to payment": "Ga naar betaling",
     "Go to": "Ga naar",
+    "has bought the following things:": "heeft een de volgende dingen gekocht:",
+    "has contributed to this list:": "heeft een bijdrage geleverd aan deze lijst:",
     "High to low": "Hoog naar laag",
     "Home": "Home",
     "Last name": "Achternaam",
@@ -41,11 +43,13 @@
     "My lists": "Mijn lijsten",
     "Name of the child": "Naam van het kind",
     "Neutral": "Neutraal",
+    "New contribution": "Nieuwe bijdrage",
     "New list": "Nieuwe lijst",
     "No account yet?": "Nog geen account?",
     "Not yet purchased": "Nog niet gekocht",
     "Offered by": "Aangeboden door",
     "On the way": "Onderweg",
+    "Order conformation": "Bestellingsbevestiging",
     "Password of the list": "Wachtwoord van de lijst",
     "Pay": "Betaal",
     "Photo of the child": "Foto van het kind",
@@ -81,6 +85,8 @@
     "products": "producten",
     "shop": "winkel",
     "spend": "uitgegeven",
+    "You have bought the following things:": "Je hebt de volgende dingen gekocht:",
+    "You have contributed to this list:": "Je hebt een bijdrage geleverd aan deze lijst:",
 
 
     "30 Days": "30 dagen",
